<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonEUaDO"
        android:layout_width="121dp"
        android:layout_height="58dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="134dp"
        android:text="€ a $"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero" />

    <Button
        android:id="@+id/buttonDOaEU"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="132dp"
        android:text="$ a €"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEUaDO" />

    <Button
        android:id="@+id/buttonEUaLI"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="132dp"
        android:text="€ a £"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDOaEU" />

    <Button
        android:id="@+id/buttonLIaEU"
        android:layout_width="124dp"
        android:layout_height="58dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="131dp"
        android:text="£ a €"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEUaLI" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLIaEU"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>